[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pypackage_test"
version = "1.2.3"
authors = [
  { name="Patrick Liu", email="author@example.com" },
]
description = "test package, C build, python package."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "test-test-test",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/patrick-csliu/Saturn"
"Bug Tracker" = "https://github.com/patrick-csliu/Saturn/issues"